syntax = "proto3";

package hss_science.accounts.v1;

option go_package = "github.com/barn0w1/hss-science/server/gen/public/accounts/v1;accountsv1";

import "google/api/annotations.proto";

service AccountsService {
  // Get authentication URL for Discord OAuth2
  rpc GetAuthUrl(GetAuthUrlRequest) returns (GetAuthUrlResponse) {
    option (google.api.http) = {
      get: "/v1/auth/url"
    };
  }

  // Exchange Discord OAuth Code for access tokens
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/v1/auth/login"
      body: "*"
    };
  }

  // Refresh Access Token using Refresh Token
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {
    option (google.api.http) = {
      post: "/v1/auth/refresh"
      body: "*"
    };
  }

  // Invalidate Refresh Token (Logout)
  rpc Logout(LogoutRequest) returns (LogoutResponse) {
    option (google.api.http) = {
      post: "/v1/auth/logout"
      body: "*"
    };
  }

  // Get own user information (requires Access Token)
  rpc GetMe(GetMeRequest) returns (User) {
    option (google.api.http) = {
      get: "/v1/users/me"
    };
  }
}

// ===== Requests / Responses =====

message GetAuthUrlRequest {
  string redirect_url = 1;
}

message GetAuthUrlResponse {
  // Discord authentication URL (includes client_id, scope, state, etc.)
  string url = 1;
}

message LoginRequest {
  string code = 1; // Auth Code returned from Discord
}

message LoginResponse {
  string access_token = 1;  // JWT
  string refresh_token = 2; // Opaque Token
  int32 expires_in = 3;     // seconds
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
  int32 expires_in = 3;
}

message LogoutRequest {
  string refresh_token = 1;
}

message LogoutResponse {}

message GetMeRequest {}

// ===== Data Models =====

message User {
  string id = 1;           // Internal UUID
  string name = 2;         // Display Name
  string avatar_url = 3;   // Icon Image URL
  string role = 4;         // "admin", "moderator", "user"
}